# ------------------------------------------------------------------------------
# Copyright 2018 Uwe Arzt, mail@uwe-arzt.de
# SPDX-License-Identifier: Apache-2.0
# ------------------------------------------------------------------------------
[package]
name = "grideye"
version = "0.2.4"
edition = "2018"
authors = ["Uwe Arzt <mail@uwe-arzt.de>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Rust driver for Grid-EYE / Panasonic AMG88(33)"
documentation = "https://docs.rs/grideye"
keywords = ["embedded-hal-driver", "grideye", "AMG8833"]
license = "Apache-2.0"
repository = "https://github.com/uwearzt/grideye"

[dependencies]
embedded-hal = "0.2.4"
bit_field = "0.10.1"
libm = "0.2.1"

[dev-dependencies]
cortex-m = "0.7.1"
cortex-m-rt = "0.6.13"
rtt-target = { version = "0.3.0", features = ["cortex-m"] }

[dependencies.stm32f4xx-hal]
version = "0.8.3"
features = ["stm32f405", "rt"]
# ------------------------------------------------------------------------------
# build example raspberrypi.rs
# linux-embedded-hal = "0.2.2"
